# FoodGram

./: .gitignore  Makefile  README.md
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/main/: settings.py  urls.py
backend/src/recipes/: admin.py  filters.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/src/recipes/management/commands/: create_baskets.py  create_favorite_recipes.py  create_recipes.py  create_tags.py  create_users.py
backend/src/recipes/migrations/: 0001_initial.py  0002_load_ingedients.py  0003_change_color_tag.py  0004_tags_could_be_blank.py
backend/src/users/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/src/users/management/commands/: create_follows.py  create_superuser.py  create_users.py
backend/src/users/migrations/: 0001_initial.py
frontend/: Dockerfile  nginx.conf
frontend/src/api/: index.js
frontend/src/components/card/: index.js
infra/: .env.backend  .env.db  .env.dev  docker-compose.dev.local.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.conf.template
infra/development/: .env.backend  .env.db  docker-compose.yml
infra/production/: .env.backend  .env.frontend  .env.nginx  backend.env  docker-compose.yml  frontend.env  nginx.conf.template  nginx.env
public/: Makefile
